# dailydriver

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  STATUS.md  io.github.gregfelice.DailyDriver.yml  meson.build  pyproject.toml  run-dev.sh  test-gtk4.sh
.github/workflows/: test.yml
aur/: .SRCINFO  PKGBUILD
data/: gschemas.compiled  io.github.gregfelice.DailyDriver.desktop.in  io.github.gregfelice.DailyDriver.gschema.xml  io.github.gregfelice.DailyDriver.metainfo.xml.in  meson.build
data/icons/: meson.build
data/screenshots/: README.md
docs/: BACKLOG.md  FLATPAK_SUBMISSION_GUIDE.md  RELEASING.md
extension/: README.md  extension.js  install.sh  metadata.json  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.dailydriver-cheatsheet.gschema.xml
flathub/: FLATHUB_PR.md
po/: POTFILES  meson.build
src/: dailydriver.in  meson.build
src/dailydriver/: __init__.py  __main__.py  application.py  window.py
src/dailydriver/models/: __init__.py  keyboard.py  meson.build  profile.py  shortcut.py
src/dailydriver/resources/: dailydriver.gresource.xml  meson.build  shortcut-editor.ui  style.css  window.ui
src/dailydriver/resources/layouts/: ansi-104.json  mac-ansi.json  meson.build
src/dailydriver/resources/presets/: gnome-tiling.toml  hyprland-style.toml  meson.build  minimal.toml  vanilla-gnome.toml
src/dailydriver/services/: __init__.py  gsettings_service.py  hardware_service.py  hid_apple_service.py  keyboard_config_service.py  meson.build  profile_service.py  tiling_service.py
src/dailydriver/services/backends/: __init__.py  base.py  detection.py  factory.py  gnome.py  kde.py
src/dailydriver/views/: __init__.py  cheatsheet.py  garage.py  hardware_panel.py  keyboard_setup.py  keyboard_view.py  meson.build  preset_selector.py  profile_panel.py  shortcut_editor.py  shortcut_list.py  tiling_setup.py  trim_packages.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_conflict.py  test_preset_apply.py
tests/unit/: __init__.py  test_gsettings.py  test_hardware.py  test_hid_apple.py  test_keyboard_config.py  test_models.py  test_profiles.py  test_shortcut.py  test_tiling.py
