install_data(
  'hicolor/scalable/apps/io.github.gregfelice.DailyDriver.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
)

install_data(
  'hicolor/symbolic/apps/io.github.gregfelice.DailyDriver-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps'
)
