views_sources = [
  '__init__.py',
  'cheatsheet.py',
  'garage.py',
  'hardware_panel.py',
  'keyboard_setup.py',
  'keyboard_view.py',
  'preset_selector.py',
  'profile_panel.py',
  'shortcut_editor.py',
  'shortcut_list.py',
  'tiling_setup.py',
  'trim_packages.py',
]

install_data(views_sources, install_dir: moduledir / 'views')
